# tui_lib

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: font_settings.rs  lib.rs  main.rs  string_plus.rs  tui_enums.rs  tui_errors.rs  tui_events.rs  tui_terminal.rs  tui_terminal_tests.rs  unix_tui.rs  windows_tui.rs
src/font_settings/: mod.rs
src/input_interface/: mod.rs
src/output_interface/: mod.rs
src/string_plus/: mod.rs
src/tui_enums/: mod.rs
src/tui_events/: mod.rs
src/tui_io/: input_interface.rs  input_parser.rs  mod.rs  mouse_input.rs  output_interface.rs  terminal_interface.rs  unix_ffi.rs  unix_tui_io.rs  windows_ffi.rs  windows_tui_io.rs
src/tui_io/unix/: constants.rs  functions.rs  mod.rs  structs.rs
src/tui_io/windows/: constants.rs  functions.rs  structs.rs
src/tui_keys/: mod.rs
src/tui_terminal/: mod.rs
