[package]
name = "tui_lib"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
description = "A Library to Be the base of a Tui Operation"
repository = "https://github.com/Ty-Cyr/tui_lib"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html